# FastLogger

./: CMakeLists.txt  Makefile-common  README  appender_factory.h  darray.h  fastlogger.c  fastlogger.h  fastlogger.pc.in  fastlogger_appender.h  fastlogger_tests.c  file_appender.c  file_appender.h  linkedlist.h
old_makefiles/: Makefile-project
